Attempt to fix the internal Apple Mavericks build after <https://trac.webkit.org/changeset/176448> (https://bugs.webkit.org/show_bug.cgi?id=138930)

Declare NSCachedURLResponse SPI when building without the Apple Internal SDK and with the Apple
Internal SDK when building for OS X Mavericks or earlier.

* platform/spi/cf/CFNetworkSPI.h:

Canonical link: https://commits.webkit.org/156831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176451 268f45cc-cd09-0410-ab3c-d52691b4dbfc