Source/WebCore/platform/spi/cf/CFNetworkSPI.h
@@ -61,13 +61,6 @@ typedef const struct _CFURLRequest *CFURLRequestRef;
 typedef void (^CFCachedURLResponseCallBackBlock)(CFCachedURLResponseRef);
 #endif
 
-#ifdef __OBJC__
-@interface NSCachedURLResponse (Details)
--(id)_initWithCFCachedURLResponse:(CFCachedURLResponseRef)cachedResponse;
--(CFCachedURLResponseRef)_CFCachedURLResponse;
-@end
-#endif
-
 #endif // PLATFORM(WIN) || USE(APPLE_INTERNAL_SDK)
 
 EXTERN_C void CFURLRequestSetShouldStartSynchronously(CFURLRequestRef, Boolean);
@@ -107,6 +100,11 @@ EXTERN_C void CFURLConnectionInvalidateConnectionCache();
 enum : NSUInteger {
     NSHTTPCookieAcceptPolicyExclusivelyFromMainDocumentDomain = 3,
 };
+
+@interface NSCachedURLResponse (Details)
+-(id)_initWithCFCachedURLResponse:(CFCachedURLResponseRef)cachedResponse;
+-(CFCachedURLResponseRef)_CFCachedURLResponse;
+@end
 #endif
 
 #endif // CFNetworkSPI_h
